syntax = "proto3";

option csharp_namespace = "GrpcCustomers";


service  CustomerProtoService
{
   rpc GetCustomerByIdentification(GetCustomerByIdentificationRequest) returns (CustomerModelResponse);
   rpc CreateCustomer(CustomerModelRequest) returns (CreateCustomerModelResponse);
   rpc GetAll(CustomerTake) returns(ReplyCustomerModel);

}
  message GetCustomerByIdentificationRequest
   {
      string identification = 1;
   }

   message ReplyCustomerModel
   {
      repeated CustomerModelResponse customerModelResponse = 1;
   }
   message CustomerTake
   {
     int32 take = 1;
   }
   message CustomerModelResponse
   {
       string name = 1;
      int64 identification = 2;  
      string state = 3;
   }
     message CustomerModelRequest
   {
       string name = 1;
      string identification = 2;  
      string state = 3;
   }
   message CreateCustomerModelResponse
   {
     int32 id = 1;
   }

 